# EmsTest

./: CMakeLists.txt
html/: index.html
res/shaders/: square.frag  square.vert
scripts/: conf_dbg.sh  conf_dev.sh  conf_ems.sh  conf_glad.sh  conf_glad_dbg.sh
src/: ShaderProgram.cpp  camera.cpp  camera.hpp  integers.hpp  main.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  square.cpp  window.cpp  window.hpp
src/util/: file_handling.cpp  file_handling.hpp
